deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
        service: test
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.20.0-alpine
          imagePullPolicy: IfNotPresent
          command:
            - /usr/sbin/nginx
            - -g
            - daemon off;
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run
              name: tmp
            - mountPath: /var/cache/nginx
              name: tmp
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 100Mi
        - name: nginx-config
          configMap:
            name: test
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test1
  name: test1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
        service: test
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.20.0-alpine
          imagePullPolicy: IfNotPresent
          command:
            - /usr/sbin/nginx
            - -g
            - daemon off;
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run
              name: tmp
            - mountPath: /var/cache/nginx
              name: tmp
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 100Mi
        - name: nginx-config
          configMap:
            name: test1
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    service: test
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: test
  name: test
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: test
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: tls
      hosts:
        - example.com
